# Seguimiento-de-gastos

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.env.example  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  start.py  test_api.py
app/: auth.py  config.py  db.py  deps.py  main.py  models.py  schemas.py  utils.py
docs/: API.md  DEPLOYMENT.md
scripts/: init-mongo.js
tests/: __init__.py  test_api.py
